# draft

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.compiler  LICENSE.md  Makefile  README.md  build.rs  config.yaml  draft.yaml  go.mod  go.sum  go.work  go.work.sum  main.go  package-lock.json  package.json  tools.go
api/: Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.go.yaml  buf.gen.gotag.yaml  buf.gen.js.yaml  buf.gen.web.yaml  buf.gen.yaml  buf.yaml  build.rs  go.mod  go.sum  package-lock.json  package.json
api/consensus/fsm/v1/: fsm.proto
api/consensus/raft/v1/: service.proto
api/core/authentication/: README.md
api/core/authentication/basic/v1/: service.pb.go  service.pb.validate.go  service.proto  service_pb.js  service_pb.ts
api/core/consensus/fsm/v1/: fsm.pb.go  fsm.proto  fsm_pb.js  fsm_pb.ts
api/core/consensus/raft/v1/: service-RaftService_connectquery.ts  service.pb.go  service.proto  service_pb.js  service_pb.ts
api/core/control_plane/networking/v1/: service-NetworkingService_connectquery.js  service-NetworkingService_connectquery.ts  service.pb.go  service.pb.validate.go  service.proto  service_connect.js  service_connect.ts  service_pb.js  service_pb.ts
api/core/control_plane/networking/v1/v1connect/: service.connect.go
api/core/message_broker/actors/v1/: consumer.pb.go  consumer.pb.validate.go  consumer.proto  consumer_connect.js  consumer_connect.ts  consumer_pb.js  consumer_pb.ts  models.pb.go  models.pb.validate.go  models.proto  models_pb.js  models_pb.ts  producer.pb.go  producer.pb.validate.go  producer.proto  producer_connect.js  producer_connect.ts  producer_pb.js  producer_pb.ts  query.pb.go  query.pb.validate.go  query.proto
api/core/message_broker/actors/v1/v1connect/: consumer.connect.go  producer.connect.go  query.connect.go
api/core/registry/key_value/v1/: data_definition_lang.pb.go  data_definition_lang.pb.validate.go  data_definition_lang.proto  models.pb.go  models.proto  models_pb.ts  service-KeyValueService_connectquery.js  service.pb.go  service.pb.validate.go  service.proto  service_connect.js  service_pb.js  service_pb.ts
api/core/registry/service_discovery/v1/: models.pb.go  models.proto  models_pb.js  service.pb.go  service.pb.validate.go  service.proto  service_connect.js  service_connect.ts  service_pb.js  service_pb.ts
api/core/registry/service_discovery/v1/v1connect/: service.connect.go
api/draft/test/hello_world/v1/: service.proto
api/examples/crud/v1/: events.pb.go  events.pb.validate.go  events.proto  models.pb.go  models.pb.validate.go  models.proto  models_pb.ts  service-CrudService_connectquery.js  service-CrudService_connectquery.ts  service.pb.go  service.proto  service_connect.ts
api/examples/echo/v1/: service.pb.go  service.proto  service_connect.js
api/examples/echo/v1/v1connect/: service.connect.go
api/examples/user/v1/: events.pb.go  events.pb.validate.go  events.proto
api/golf_app/shot_tracker/v1/: service.proto
api/registry/data_center/v1/: model.proto  service.proto
api/registry/health/v1/: service.proto
api/registry/key_val/v1/: service.proto
api/registry/key_value/v1/: models.proto  service.proto
api/registry/service_discovery/v1/: models.proto  service.proto
api/src/: basic.rs  draft.proto  eventer.proto  firegraph.proto  lib.rs  reader.proto  registrar.proto  registry.proto  user.proto  writer.proto
api/src/draft/authentication/v1/: user.proto
api/src/draft/operations/tasks/v1/: service.proto
api/src/hook/: core.control_plane.networking.v1.dx.rs  core.message_broker.actors.v1.dx.rs  core.registry.key_value.v1.dx.rs  core.registry.service_discovery.v1.dx.rs  mod.rs
api/src/hooks/: core.registry.key_value.v1.dx.rs  google.protobuf.dx.rs
api/src/pb/: core.registry.key_value.v1.rs
api/src/proto/: core.control_plane.networking.v1.rs  core.message_broker.actors.v1.rs  core.registry.key_value.v1.rs  core.registry.service_discovery.v1.rs  mod.rs
cmd/: event_store.go  eventer.go  (+5 more)
internal/blueprint/web-client/: Cargo.toml  README.md  Trunk.toml  package-lock.json  package.json  webpack.config.js
internal/blueprint/web-client/scss/: style.scss
internal/blueprint/web-client/src/: index.js  main.rs  theme.js
internal/blueprint/web-client/src/components/: App.js  Chart.js  Deposits.js  MainAppBar.js  Orders.js  listItems.js
internal/blueprint/web-client/src/grpc/provider/: grpc_client_provider.js
internal/blueprint/web-client/src/pages/: App.js  DashboardViewport.js  KeyValues.js  Metrics.js
internal/blueprint/web-client/src/services/: key_value_rpc.js
services/core/blueprint/web-client/: Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package-lock.json  package.json  tailwind.config.js
services/core/blueprint/web-client/public/: daisyui.css  globals.css  index.html  manifest.json  tailwind.js
services/core/blueprint/web-client/src/: App.tsx  grpc_client.rs  index.css  index.js  index.tsx  main.rs  theme.js
services/core/blueprint/web-client/src/components/: Button.js  Chart.js  ClusterDetails.js  ClusterNodes.js  ClusterNodesList.js  Container.js  Copyright.js  Footer.js  Header.js  HelpModal.tsx  MainAppBar.js  MainContainer.js  Search.js  Snackbar.js  Title.js  cesql_bar.rs  filter_chips.rs  hero.rs  index.html  index.rsx  mod.rs  navbar.rs  type_badge.rs
services/core/blueprint/web-client/src/context/: ThemeContext.js
services/core/blueprint/web-client/src/pages/: Dashboard.js  DashboardViewport.js  KeyValue.js  KeyValues.js  Metrics.js  ServiceRegistry.js  ServiceRegistryDashboard.js  key_value.tsx  metrics.tsx  service_registry.tsx
services/core/blueprint/web-client/src/services/: consumer.tsx
services/core/blueprint/web-client/src/store/: index.js  key_value_rpc.js
services/core/blueprint/web-client/src/utils/: config.js  config.ts
tools/dioxus-grpc/examples/: Cargo.toml  README.md  build.rs
tools/dioxus-grpc/examples/proto/: helloworld.proto  messages.proto
tools/dioxus-grpc/examples/src/: basic.rs
tools/dioxus-grpc/examples/src/hook/: mod.rs
(+539 files in other folders)
