[package]
name = "draft"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build_protos"
path = "build.rs"

[[bin]]
name = "fuse"
path = "./services/core/fuse/src/main.rs"

[[bin]]
name = "fuse_client"
path = "./services/core/fuse/src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = {version = "0.11", features = ["prost"]} 