[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tonic = { version = "0.10.1", default-features = false, features = [
    "prost",
    "codegen",
] }

[build-dependencies]
tonic-build = { version = "0.10.1", default-features = false, features = [
    "prost",
] }