[package]
name = "draft-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
    dioxus = { version = "0.7" }
    dioxus-grpc = { path = "../tools/dioxus-grpc", default-features = false }
    prost = "0.14.3"
    tokio = { version = "1", optional = true, features = ["full"] }
    tonic = { version = "0.14", default-features = false, features = ["codegen"] }
    tonic-prost = { version = "0.14" }
    tonic-web = { version = "0.14.5" }
    tonic-web-wasm-client = { version = "0.9.1", optional = true }
    tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
    prost-types = "0.14"

[build-dependencies]
    dioxus-grpc = { path = "../tools/dioxus-grpc", features = ["web"] }
    tonic-prost-build = { version = "0.14" }

[features]
    default = []
    # Client /server
    clnt = []
    srv = [
        "dep:tokio",
        "dep:tower-http",
        "tonic-prost-build/transport",
        "tonic/router",
        "tonic/server",
        "tonic/transport",
    ]
    # Platforms
    mobile = [
        "dep:tokio",
        "dioxus/mobile",
        "tonic-prost-build/transport",
        "tonic/router",
        "tonic/server",
        "tonic/transport",
    ]
    web = ["dep:tonic-web-wasm-client", "dioxus-grpc/web", "dioxus/web"]


[[bin]]
    name = "helloworld"
    path = "src/basic.rs"


[profile]

    [profile.wasm-dev]
        inherits = "dev"
        opt-level = 1

    [profile.server-dev]
        inherits = "dev"

    [profile.android-dev]
        inherits = "dev"
