[package]
name = "blueprint-pwa"
version = "0.1.0"
authors = ["Andrew Meiling andrew@steady-bytes.com", "Jack Kawell jack@steady-bytes.com", "steady-bytes | steady-bytes.com"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["web", "router"] }
dioxus-logger = "0.6.2"
dotenv = "0.15.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
